# agent-injector

./: .gitignore  .mcp.json  Dockerfile  README.md  SKILL.md  claude_desktop_config.example.json  pyproject.toml
.claude-plugin/: plugin.json
skills/agent-injector/: SKILL.md
src/agent_injector/: __init__.py  server.py
